Tue Dec  9 10:40:18 CET 2014 <Daniel.Diaz@univ-paris1.fr>

	* improve term output (write/1 and friends)

Fri Dec  5 02:55:30 CET 2014 <Daniel.Diaz@univ-paris1.fr>

	* improve error handling for options (e.g. in write_term/3)

Thu Dec  4 15:47:06 CET 2014 <Daniel.Diaz@univ-paris1.fr>

	* fix bug with cut in the if-part of if-then(-else)
	* fix port to x86_64/OpenBSD
	  (machine kindly provided by Duncan Patton a Campbell)

Wed Dec  3 17:56:54 CET 2014 <Daniel.Diaz@univ-paris1.fr>

	* fix a bug with Apple/Yosemite gcc = LLVM version 6.0 (clang-600.0.56) on x86_64

Fri Aug 22 15:10:18 CEST 2014 <Daniel.Diaz@univ-paris1.fr>

	* allow to define more atoms with MAX_ATOM env var on 64 bits machines

Wed Aug 13 11:25:18 CEST 2014 <Daniel.Diaz@univ-paris1.fr>

	* fix a bug in bagof/3 when used as findall/3

Fri Jul 11 17:27:36 CEST 2014 <Daniel.Diaz@univ-paris1.fr>

	* port to sparc64/OpenBSD
	  (machine kindly provided by Duncan Patton a Campbell)

Tue May  6 10:43:33 CEST 2014 <Daniel.Diaz@univ-paris1.fr>

	* add built-in predicate findall/4

Thu Mar  6 16:19:36 CET 2014 <Daniel.Diaz@univ-paris1.fr>

	* fix a bug with linedit when environment variable LINEDIT=no

Wed Feb  5 15:16:37 CET 2014 <Daniel.Diaz@univ-paris1.fr>

	* fix bugs in the FD solver

Fri Nov 22 19:47:45 CET 2013 <Daniel.Diaz@univ-paris1.fr>

	* set socket option SO_REUSEADDR at socket creation

Thu Nov 21 16:29:57 CET 2013 <Daniel.Diaz@univ-paris1.fr>

	* support for alternate Prolog file extension .prolog

Mon Nov 18 18:32:44 CET 2013 <Daniel.Diaz@univ-paris1.fr>

	* fix a bug in atoms for 1-char atom '\0' (now acts as the empty atom)

Tue Nov 12 10:17:10 CET 2013 <Daniel.Diaz@univ-paris1.fr>

	* fix problems with Apple/Mavericks gcc = LLVM version 5.0 (clang-500.2.79) on x86_64
	* remove clang warnings (uninitialized variables)
	* fix bugs in the lexer of the form 0bop 2 when bop is an infix op

Tue Oct  1 09:40:31 CEST 2013 <Daniel.Diaz@univ-paris1.fr>

	* fix terminal ANSI sequence handling in linedit