@@ -1,3 +1,7 @@
+Thu Dec 11 17:18:09 CET 2014 <Daniel.Diaz@univ-paris1.fr>
+
+	* improve memory limitation of acyclic_term/1
+
 Tue Dec  9 10:40:18 CET 2014 <Daniel.Diaz@univ-paris1.fr>
 
 	* improve term output (write/1 and friends)
